--- a/website/templates/website/password_change.html
+++ b/website/templates/website/password_change.html
@@ -8,7 +8,7 @@
                 <form class="form form-default" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% include 'website/messages.html' %}
-                    {% include 'website/form.html' with form=form %}
+                    {% include 'website/form.html' %}
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
