--- a/website/templates/website/form.html
+++ b/website/templates/website/form.html
@@ -1,5 +1,3 @@
-{% load widget_tweaks %}
-
 {% for hidden_field in form.hidden_fields %}
     {{ hidden_field }}
 {% endfor %}
@@ -13,28 +11,5 @@
 {% endif %}
 
 {% for field in form.visible_fields %}
-    {% if form.is_bound and field.errors %}
-        <div class="form-group has-error has-feedback">
-    {% else %}
-        <div class="form-group">
-    {% endif %}
-
-    {{ field.label_tag }}
-
-    {% render_field field class="form-control" %}
-
-    {% if form.is_bound and field.errors %}
-        <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-        <span class="sr-only">(error)</span>
-        {% for error in field.errors %}
-            <div class="help-block">
-                {{ error }}
-            </div>
-        {% endfor %}
-    {% endif %}
-
-    {% if field.help_text %}
-        <div class="help-block small">{{ field.help_text }}</div>
-    {% endif %}
-    </div>
+    {% include 'website/form-field.html' %}
 {% endfor %}
