--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -24,7 +24,7 @@
                     {% if next %}
                         <input type="hidden" name="next" value="{{ next }}" />
                     {% endif %}
-                    {% include 'website/form.html' with form=form %}
+                    {% include 'website/form.html' %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
                 <p><a href="{% url 'website:password_reset' %}">Forgot Password?</a></p>
