--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -8,7 +8,7 @@
                 <form class="form form-default" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% include 'website/messages.html' %}
-                    {% include 'website/form.html' with form=form %}
+                    {% include 'website/form.html' %}
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
                 <div tabindex="-1" id="termsModal" class="modal fade modal-fullscreen modal-scrollable" role="dialog">
