--- a/website/templates/website/project_detail.html
+++ b/website/templates/website/project_detail.html
@@ -42,13 +42,13 @@
                 <h4><strong>Projects Cloned:</strong> {{ cloned|intcomma }}</h4>
                 {% calc_finished_projects project as finished_count %}
                 {% calc_remaining_projects project as remaining_count %}
-                {% calc_remaining_percent finished_count remaining_count as remaining_pct %}
+                {% calc_finished_percent finished_count remaining_count as finished_pct %}
                 {% if finished_count > 0 %}
-                    <h4><strong>Benchmark Projects:</strong> {{ finished_count|intcomma }}{% if not is_done %} ({{ remaining_pct|intcomma }}% still processing){% endif %}</h4>
+                    <h4><strong>Benchmark Projects:</strong> {{ finished_count|intcomma }}</h4>
                     {% if not is_done %}
                         <div class="progress">
-                            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: {{ calc_remaining_percent }}%">
-                                <span class="sr-only">{{ calc_remaining_percent }}% Complete</span>
+                            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{ finished_pct }}" aria-valuemin="0" aria-valuemax="100" title="{{ finished_pct }}% complete" style="width: {{ finished_pct }}%">
+                                <span class="sr-only">{{ finished_pct }}% Complete</span>
                             </div>
                         </div>
                     {% endif %}
