--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -69,7 +69,7 @@
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'website:project_selection' %}">New project selection</a></li>
                             <li><a href="{% url 'website:project_list' %}">List project selections</a></li>
-                            <li><a href="{% url 'website:transformer_list' %}">List project transformers</a></li>
+                            <li><a href="{% url 'website:transformer_list' %}">List project transforms</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'website:logout' %}">Sign out</a></li>
                         </ul>
