--- a/website/templates/website/create_transformer.html
+++ b/website/templates/website/create_transformer.html
@@ -1,14 +1,13 @@
 {% extends "website/base.html" %}
-{% block title %}Project Transformer{% endblock %}
+{% block title %}Project Transform{% endblock %}
 {% block body %}
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
             {% include 'website/messages.html' %}
-            <h3>Project Transformer</h3>
+            <h3>Project Transform</h3>
             <form class="form form-default" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                {% include 'website/form.html' with form=p_form %}
                 {% include 'website/form.html' with form=t_form %}
                 <button type="submit" class="btn btn-primary pull-right">Create</button>
             </form>
