--- a/website/templates/website/transformers.html
+++ b/website/templates/website/transformers.html
@@ -1,7 +1,7 @@
 {% extends 'website/base.html' %}
 {% load calc_finished_projects %}
 {% load humanize %}
-{% block title %}Project Transformers{% endblock %}
+{% block title %}Project Transforms{% endblock %}
 {% block projectsactive %}active{% endblock %}
 {% block style %}
 <style type="text/css">
@@ -24,12 +24,12 @@
 {% block body %}
     <div class="container-fluid" style="width: 80%">
         {% include 'website/messages.html' %}
-        <h1>Project Transformers</h1>
+        <h1>Project Transforms</h1>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
                 <thead>
                     <tr>
-                        <th>Project Transformer</th>
+                        <th>Project Transform</th>
                         <th>Submitted</th>
                         <th># Benchmark Projects</th>
                         <th>Options</th>
@@ -59,7 +59,7 @@
                         </tr>
                     {% empty %}
                         <tr>
-                            <td colspan="4">You currently have no project transformers.</td>
+                            <td colspan="4">You currently have no project transforms.</td>
                         </tr>
                     {% endfor %}
                 </tbody>
