cleanup and refactor

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -67,9 +67,9 @@
                                 <li><a href="{% url 'admin:index' %}">Admin</a></li>
                             {% endif %}
                             <li role="separator" class="divider"></li>
-                            <li><a href="{% url 'website:project_selection' %}">New project selection</a></li>
-                            <li><a href="{% url 'website:project_list' %}">List project selections</a></li>
-                            <li><a href="{% url 'website:transformer_list' %}">List project transforms</a></li>
+                            <li><a href="{% url 'website:create_selection' %}">New project selection</a></li>
+                            <li><a href="{% url 'website:list_selections' %}">List project selections</a></li>
+                            <li><a href="{% url 'website:list_transforms' %}">List project transforms</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{% url 'website:logout' %}">Sign out</a></li>
                         </ul>
