--- a/website/templates/website/delete.html
+++ b/website/templates/website/delete.html
@@ -2,11 +2,12 @@
 {% block body %}
 <div class="container">
     {% include 'website/messages.html' %}
-    <h2>Are you sure you want to delete this asset?</h2>
+    <h2>Are you sure you want to delete this {{ asset }}?</h2>
     <hr>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <button class="btn btn-danger">Delete</button>
+        <a href="{{ cancel }}">Cancel</a>
     </form>
-</div>  
+</div>
 {% endblock %}
