--- a/website/templates/website/policies/terms.html
+++ b/website/templates/website/policies/terms.html
@@ -1,15 +1,15 @@
 {% extends 'website/base.html' %}
-{% block title %}Privacy Policy{% endblock %}
+{% block title %}Terms of Use{% endblock %}
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>Privacy Policy</h1>
+                <h1>Terms of Use Policy</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
-                {% include "website/agreement/privacy.html" %}
+                {% include "website/policies/agreement/terms.html" %}
             </div>
         </div>
     </div>
