--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -7,7 +7,7 @@
     <div class="container">
         {% include 'website/messages.html' %}
         {% if user.is_authenticated %}
-            <a href="{% url 'website:project_list' %}">Back to all project selections</a><br/><br/>
+            <a href="{% url 'website:list_selections' %}">Back to all project selections</a><br/><br/>
         {% endif %}
         {% if project.enabled %}
             {% if project.status == "READY" %}
@@ -26,14 +26,16 @@
                 {% if not project.enabled %}
                     <div class="alert alert-danger">NOTE: this selector is deleted</div>
                 {% endif %}
-                <div class="btn-group pull-right clearfix">
-                    <a href="" role="button" class="btn btn-default"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span><span class="sr-only">Duplicate</span></a>
-                    <a href="{% url 'website:transformer' slug=project.slug %}" role="button" class="btn btn-success"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-random" aria-hidden="true"></span><span class="sr-only">Transform</span></a>
-                    {% if user.is_staff %}
-                        <a href="{% url 'admin:website_projectselector_change' object_id=project.pk %}" role="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span><span class="sr-only">Edit</span></a>
-                        <a href="" role="button" class="btn btn-warning"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span><span class="sr-only">Restart</span></a>
-                    {% endif %}
-                    <a href="{% url 'website:project_delete' slug=project.slug %}" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                <div class="pull-right clearfix">
+                    <div class="btn-group">
+                        <a href="" title="Duplicate" role="button" class="btn btn-default"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span><span class="sr-only">Duplicate</span></a>
+                        {% if is_done %}
+                            <a href="{% url 'website:create_transform_selection' slug=project.slug %}" title="Transform" role="button" class="btn btn-success"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-random" aria-hidden="true"></span><span class="sr-only">Transform</span></a>
+                        {% endif %}
+                    </div>
+                    <div class="btn-group">
+                        <a href="{% url 'website:delete_selection' slug=project.slug %}" title="Delete" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                    </div>
                 </div>
                 <h4><strong>Selection Submitted:</strong> <span title="{{ project.submitted }}">{{ project.submitted|naturaltime }}</span></h4>
                 <h4><strong>Submitted By:</strong> {{ project.user }}</h4>
@@ -67,14 +69,14 @@
                     <h4><strong>Dataset Generated:</strong> <span title="{{ project.fin_process }}">{{ project.fin_process|naturaltime }}</span></h4>
                     {% if finished_count > 0 %}
                         {% if download_size > 0 %}
-                            <h3><strong><a href="{% url 'website:download' project.slug %}">Download Benchmark</a> (zip)</strong></h3>
+                            <h3><strong><a href="{% url 'website:download_selection' project.slug %}">Download Benchmark</a> (zip)</strong></h3>
                             <h4>({{ download_size|filesizeformat|intcomma }})</h4>
                         {% else %}
                             {% if download_size == 0 %}
                                 <h3><strong>Benchmark currently generating (zip)</strong></h3>
                                 <h4>(please be patient - this may take a few minutes)</h4>
                             {% else %}
-                                <h3><strong><a href="{% url 'website:download' project.slug %}">Generate Benchmark</a> (zip)</strong></h3>
+                                <h3><strong><a href="{% url 'website:download_selection' project.slug %}">Generate Benchmark</a> (zip)</strong></h3>
                                 <h4>(please be patient and only click the above link once)</h4>
                             {% endif %}
                         {% endif %}
