--- a/website/templates/website/selections/list.html
+++ b/website/templates/website/selections/list.html
@@ -40,7 +40,7 @@
                 <tbody>
                     {% for project in projects %}
                         <tr>
-                            <td><a href="{% url 'website:project_detail' slug=project.slug %}">{{ project.slug }}</a></td>
+                            <td><a href="{% url 'website:selection_detail' slug=project.slug %}">{{ project.slug }}</a></td>
                             <td>{{ project.created|naturalday }}</td>
                             <td>{% if not project|project_done %}
                                 <span class="glyphicon glyphicon-refresh spinning" aria-hidden="true"></span> processing...
@@ -50,8 +50,8 @@
                             {% endif %}</td>
                             <td>
                                 <div class="btn-group">
-                                    <a href="{% url 'website:project_detail' slug=project.slug %}" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View</a>
-                                    <a href="{% url 'website:project_delete' slug=project.slug %}" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                                    <a href="{% url 'website:selection_detail' slug=project.slug %}" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View</a>
+                                    <a href="{% url 'website:delete_selection' slug=project.slug %}" role="button" class="btn btn-danger"{% if not project.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
                                 </div>
                             </td>
                         </tr>
