--- a/website/templates/website/transforms/detail.html
+++ b/website/templates/website/transforms/detail.html
@@ -7,7 +7,7 @@
     <div class="container">
         {% include 'website/messages.html' %}
         {% if user.is_authenticated %}
-            <a href="{% url 'website:transformer_list' %}">Back to all project transforms</a><br/><br/>
+            <a href="{% url 'website:list_transforms' %}">Back to all project transforms</a><br/><br/>
         {% endif %}
         {% if transformer.enabled %}
             {% if transformer.status == "READY" %}
@@ -30,7 +30,7 @@
                     {% if user.is_staff %}
                         <a href="{% url 'admin:website_projecttransformer_change' object_id=transformer.pk %}" role="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span><span class="sr-only">Edit</span></a>
                     {% endif %}
-                    <a href="{% url 'website:delete_transformer' slug=transformer.slug %}" role="button" class="btn btn-danger"{% if not transformer.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
+                    <a href="{% url 'website:delete_transform' slug=transformer.slug %}" role="button" class="btn btn-danger"{% if not transformer.enabled %} disabled="disabled"{% endif %}><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only">Delete</span></a>
                 </div>
                 <h4><strong>Transform Submitted:</strong> <span title="{{ transformer.created }}">{{ transformer.created|naturaltime }}</span></h4>
                 <h4><strong>Submitted By:</strong> {{ transformer.user }}</h4>
@@ -62,14 +62,14 @@
                     <h4><strong>Dataset Generated:</strong> <span title="{{ transformer.datetime_processed }}">{{ transformer.datetime_processed|naturaltime }}</span></h4>
                     {% if finished_count > 0 %}
                         {% if download_size > 0 %}
-                            <h3><strong><a href="{% url 'website:download_transformer' transformer.slug %}">Download Benchmark</a> (zip)</strong></h3>
+                            <h3><strong><a href="{% url 'website:download_transform' transformer.slug %}">Download Benchmark</a> (zip)</strong></h3>
                             <h4>({{ download_size|filesizeformat|intcomma }})</h4>
                         {% else %}
                             {% if download_size == 0 %}
                                 <h3><strong>Benchmark currently generating (zip)</strong></h3>
                                 <h4>(please be patient - this may take a few minutes)</h4>
                             {% else %}
-                                <h3><strong><a href="{% url 'website:download_transformer' transformer.slug %}">Generate Benchmark</a> (zip)</strong></h3>
+                                <h3><strong><a href="{% url 'website:download_transform' transformer.slug %}">Generate Benchmark</a> (zip)</strong></h3>
                                 <h4>(please be patient and only click the above link once)</h4>
                             {% endif %}
                         {% endif %}
